# second_mind_public

./: .gitignore  CLAUDE.md  README.md  architecture.md  justfile  lefthook.yml  mise.toml
.claude/skills/architecture-review/: SKILL.md
.claude/skills/commits/: SKILL.md
.claude/skills/explore/: SKILL.md
.claude/skills/graph-analysis/: SKILL.md
.claude/skills/graph-landscape/: SKILL.md
.claude/skills/llm-resource-design/: SKILL.md
.claude/skills/public-mirror/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/rust-safety/: SKILL.md
.claude/skills/system-design-review/: SKILL.md
.claude/skills/writing-pr-descriptions/: SKILL.md
.claude/skills/writing-rust-tests/: SKILL.md
.claude/skills/writing-style/: SKILL.md
channels.example/: reading-notes.md  research.md  technical.md
docker/: .env.example  docker-compose.yml  init-ollama.sh
docker/patches/: anthropic_adapter.py
explorer/: Cargo.toml
explorer/src/: agent.rs  api.rs  main.rs  review.rs  util.rs
explorer/src/tools/: knowledge.rs  mod.rs  papers.rs  reader.rs  web.rs
graph-engine/: Cargo.toml  Dockerfile  FEATURES.md  PLAN.md
graph-engine/analysis/: 01-cognee.md  02-graphrag.md  03-graphiti.md  04-lightrag.md  05-kggen.md  06-nano-graphrag.md  IMPLEMENTATION_PATTERNS.md  LANDSCAPE_2026-04-18.md  SYNTHESIS.md
graph-engine/migrations/: 001_initial.sql
graph-engine/src/: cache.rs  chunker.rs  communities.rs  embedder.rs  extractor.rs  graph.rs  lib.rs  main.rs  pipeline.rs  resolver.rs  schema.rs  server.rs  temporal.rs  types.rs  vectors.rs
graph-engine/src/store/: mod.rs  neo4j.rs  postgres.rs
graph-engine/tests/: end_to_end.rs  integration.rs  neo4j_integration.rs
intake-engine/: Cargo.toml  Dockerfile
intake-engine/src/: #backend.rs#  backend.rs  cognee.rs  graph_engine.rs  library.rs  log.rs  main.rs  prompts.rs  search_log.rs  server.rs  types.rs
scripts/: explore-deep.sh
tests/: embedding_test.sh
