[package]
name = "second-mind"
version = "0.6.2"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }
pgvector = { version = "0.4", features = ["sqlx"] }
text-splitter = { version = "0.29", features = ["tokenizers", "markdown"] }
tokenizers = "0.21"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
dotenvy = "0.15"
neo4rs = "0.8"
futures = "0.3.32"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1"
serial_test = "3"
